@@ -1,5 +1,8 @@
-2013-01-10  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2013-01-11  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* pydb.py: When the Python script is started from Vim with the command
+	':Pyclewn pdb script.py', the script is terminated after the 'quit'
+	command has been issued.
 	* pydb.py: Pdb stops now at a breakpoint set in one of the callers
 	after an interrupt.
 	* pydb.py: Pdb stops now at the next statement in the main module when
